Added v3, using efficiant moves